@@ -18,6 +18,7 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.lang.reflect.InvocationTargetException;
 import java.nio.charset.StandardCharsets;
 import java.util.AbstractMap;
 import java.util.ArrayList;
@@ -42,13 +43,11 @@ import org.apache.commons.lang.StringEscapeUtils;
 import org.apache.commons.lang.StringUtils;
 import org.apache.log4j.Logger;
 import org.bouncycastle.util.encoders.Hex;
-import org.cesecore.CesecoreException;
 import org.cesecore.keys.validation.DnsNameValidator;
 import org.cesecore.keys.validation.IssuancePhase;
 import org.cesecore.keys.validation.Validator;
 import org.cesecore.keys.validation.ValidatorBase;
 import org.cesecore.profiles.Profile;
-import org.cesecore.util.CertTools;
 import org.cesecore.util.MapTools;
 import org.cesecore.util.NameTranslatable;
 import org.cesecore.util.ValidityDate;
@@ -60,6 +59,9 @@ import org.cesecore.util.ui.PropertyValidationException;
 import org.ejbca.core.model.validation.domainblacklist.DomainBlacklistChecker;
 import org.ejbca.core.model.validation.domainblacklist.DomainBlacklistExactMatchChecker;
 import org.ejbca.core.model.validation.domainblacklist.DomainBlacklistNormalizer;
+
+import com.keyfactor.CesecoreException;
+import com.keyfactor.util.CertTools;
 
 /**
  * A Domain Blacklist Validator checks DNSName fields against a set of blacklists.
@@ -203,10 +205,10 @@ public class DomainBlacklistValidator extends ValidatorBase implements DnsNameVa
         for (final String normalizerName : getNormalizations())  {
             try {
                 final Class<?> normalizerClass = Class.forName(normalizerName);
-                final DomainBlacklistNormalizer normalizer = (DomainBlacklistNormalizer) normalizerClass.newInstance();
+                final DomainBlacklistNormalizer normalizer = (DomainBlacklistNormalizer) normalizerClass.getDeclaredConstructor().newInstance();
                 normalizer.initialize(data);
                 newNormalizers.add(normalizer);
-            } catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+            } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
                 log.error("Failed to load Domain Block List Normalizer '" + normalizerName + "'.");
                 newInitializationFailure = true;
             }
@@ -215,9 +217,9 @@ public class DomainBlacklistValidator extends ValidatorBase implements DnsNameVa
         for (final String checkerName : getChecks())  {
             try {
                 final Class<?> checkerClass = Class.forName(checkerName);
-                final DomainBlacklistChecker checker = (DomainBlacklistChecker) checkerClass.newInstance();
+                final DomainBlacklistChecker checker = (DomainBlacklistChecker) checkerClass.getDeclaredConstructor().newInstance();
                 newCheckers.add(checker);
-            } catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+            } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
                 log.error("Failed to load Domain Block List Checker '" + checkerName + "'.");
                 newInitializationFailure = true;
             }
