@@ -15,6 +15,10 @@ package org.ejbca.core.model.era;
 
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
+import java.lang.reflect.InvocationHandler;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
+import java.lang.reflect.Proxy;
 import java.math.BigInteger;
 import java.security.InvalidAlgorithmParameterException;
 import java.security.InvalidKeyException;
@@ -62,8 +66,6 @@ import org.bouncycastle.asn1.x500.X500Name;
 import org.bouncycastle.jce.provider.BouncyCastleProvider;
 import org.bouncycastle.operator.OperatorCreationException;
 import org.bouncycastle.pkcs.PKCS10CertificationRequest;
-import org.cesecore.CesecoreException;
-import org.cesecore.ErrorCode;
 import org.cesecore.audit.enums.EventType;
 import org.cesecore.authentication.AuthenticationFailedException;
 import org.cesecore.authentication.tokens.AuthenticationToken;
@@ -83,7 +85,6 @@ import org.cesecore.certificates.certificate.CertificateCreateException;
 import org.cesecore.certificates.certificate.CertificateDataWrapper;
 import org.cesecore.certificates.certificate.CertificateRevokeException;
 import org.cesecore.certificates.certificate.CertificateStatus;
-import org.cesecore.certificates.certificate.CertificateWrapper;
 import org.cesecore.certificates.certificate.IllegalKeyException;
 import org.cesecore.certificates.certificate.certextensions.CertificateExtensionException;
 import org.cesecore.certificates.certificate.exception.CertificateSerialNumberException;
@@ -94,18 +95,13 @@ import org.cesecore.certificates.certificateprofile.CertificateProfileDoesNotExi
 import org.cesecore.certificates.endentity.EndEntityConstants;
 import org.cesecore.certificates.endentity.EndEntityInformation;
 import org.cesecore.certificates.endentity.ExtendedInformation;
-import org.cesecore.certificates.util.AlgorithmTools;
 import org.cesecore.config.RaStyleInfo;
 import org.cesecore.configuration.ConfigurationBase;
 import org.cesecore.configuration.GlobalConfigurationSessionLocal;
-import org.cesecore.keys.token.CryptoTokenOfflineException;
-import org.cesecore.keys.util.KeyTools;
 import org.cesecore.roles.AccessRulesHelper;
 import org.cesecore.roles.Role;
 import org.cesecore.roles.RoleExistsException;
 import org.cesecore.roles.member.RoleMember;
-import org.cesecore.util.CertTools;
-import org.cesecore.util.EJBTools;
 import org.ejbca.config.GlobalConfiguration;
 import org.ejbca.core.EjbcaException;
 import org.ejbca.core.ejb.dto.CertRevocationDto;
@@ -148,6 +144,15 @@ import org.ejbca.cvc.exception.ConstructionException;
 import org.ejbca.cvc.exception.ParseException;
 import org.ejbca.ui.web.protocol.CertificateRenewalException;
 import org.ejbca.util.query.IllegalQueryException;
+
+import com.keyfactor.CesecoreException;
+import com.keyfactor.ErrorCode;
+import com.keyfactor.util.CertTools;
+import com.keyfactor.util.EJBTools;
+import com.keyfactor.util.certificate.CertificateWrapper;
+import com.keyfactor.util.crypto.algorithm.AlgorithmTools;
+import com.keyfactor.util.keys.KeyTools;
+import com.keyfactor.util.keys.token.CryptoTokenOfflineException;
 
 /**
  * Proxy implementation of the the RaMasterApi that will get the result of the most preferred API implementation
@@ -195,6 +200,11 @@ public class RaMasterApiProxyBean implements RaMasterApiProxyBeanLocal {
     private RaMasterApi[] raMasterApis = null;
     private RaMasterApi[] raMasterApisLocalFirst = null;
 
+    // Used in tests
+    private RaMasterApi[] savedRaMasterApisBeforeTest;
+    private RaMasterApi[] savedRaMasterApisLocalFirstBeforeTest;
+    private List<String> functionTraceForTest;
+
     /** Default constructor */
     public RaMasterApiProxyBean() {
     }
@@ -219,19 +229,19 @@ public class RaMasterApiProxyBean implements RaMasterApiProxyBeanLocal {
         try {
             // Load downstream peer implementation if available in this version of EJBCA
             final Class<?> c = Class.forName("org.ejbca.peerconnector.ra.RaMasterApiPeerDownstreamImpl");
-            implementations.add((RaMasterApi) c.newInstance());
+            implementations.add((RaMasterApi) c.getDeclaredConstructor().newInstance());
         } catch (ClassNotFoundException e) {
             log.debug("RaMasterApi over Peers is not available on this system.");
-        } catch (InstantiationException | IllegalAccessException e) {
+        } catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
             log.warn("Failed to instantiate RaMasterApi over Peers: " + e.getMessage());
-        }
+        } 
         try {
             // Load upstream peer implementation if available in this version of EJBCA
             final Class<?> c = Class.forName("org.ejbca.peerconnector.ra.RaMasterApiPeerUpstreamImpl");
-            implementations.add((RaMasterApi) c.newInstance());
+            implementations.add((RaMasterApi) c.getDeclaredConstructor().newInstance());
         } catch (ClassNotFoundException e) {
             log.debug("RaMasterApi over Peers is not available on this system.");
-        } catch (InstantiationException | IllegalAccessException e) {
+        } catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
             log.warn("Failed to instantiate RaMasterApi over Peers: " + e.getMessage());
         }
         implementations.add(raMasterApiSession);
@@ -245,6 +255,56 @@ public class RaMasterApiProxyBean implements RaMasterApiProxyBeanLocal {
     public void deferLocalForTest() {
         raMasterApisLocalFirst = (RaMasterApi[]) ArrayUtils.removeElement(raMasterApisLocalFirst, raMasterApiSession);
         raMasterApisLocalFirst = (RaMasterApi[]) ArrayUtils.add(raMasterApisLocalFirst, raMasterApiSession);
+    }
+
+    // Use in tests only!
+    @Override
+    public void enableFunctionTracingForTest() {
+        restoreFunctionTracingAfterTest(); // if already tracing
+        final int numBackends = raMasterApis.length;
+        savedRaMasterApisBeforeTest = raMasterApis;
+        savedRaMasterApisLocalFirstBeforeTest = raMasterApisLocalFirst;
+        functionTraceForTest = new ArrayList<>();
+        String suffix = TEST_TRACE_SUFFIX_REMOTE;
+        raMasterApis = new RaMasterApi[numBackends];
+        raMasterApisLocalFirst = new RaMasterApi[numBackends];
+        for (int i = 0; i < numBackends; i++) {
+            final RaMasterApi wrapped = wrapInTracingProxy(savedRaMasterApisBeforeTest[i], suffix);
+            raMasterApis[i] = wrapped;
+            raMasterApisLocalFirst[numBackends-1 - i] = wrapped;
+            suffix = TEST_TRACE_SUFFIX_LOCAL;
+        }
+    }
+
+    private RaMasterApi wrapInTracingProxy(final RaMasterApi raMasterApi, final String suffix) {
+        final List<String> functionTrace = functionTraceForTest;
+        return (RaMasterApi) Proxy.newProxyInstance(RaMasterApi.class.getClassLoader(),
+                new Class[] { RaMasterApi.class },
+                new InvocationHandler() {
+                    @Override
+                    public Object invoke(final Object proxy, final Method method, final Object[] args) throws Throwable {
+                        functionTrace.add(method.getName() + suffix);
+                        return method.invoke(raMasterApi, args);
+                    }
+                });
+    }
+
+    // Use in tests only!
+    @Override
+    public List<String> getFunctionTraceForTest() {
+        return functionTraceForTest;
+    }
+
+    // Use in tests only!
+    @Override
+    public void restoreFunctionTracingAfterTest() {
+        if (savedRaMasterApisBeforeTest != null) {
+            raMasterApis = savedRaMasterApisBeforeTest;
+            raMasterApisLocalFirst = savedRaMasterApisLocalFirstBeforeTest;
+            savedRaMasterApisBeforeTest = null;
+            savedRaMasterApisLocalFirstBeforeTest = null;
+            functionTraceForTest = null;
+        }
     }
 
     @Override
@@ -294,6 +354,33 @@ public class RaMasterApiProxyBean implements RaMasterApiProxyBeanLocal {
                 } catch (UnsupportedOperationException | RaMasterBackendUnavailableException e) {
                     // Just try next implementation
                 }
+            }
+        }
+        return false;
+    }
+    
+    @Override
+    public boolean isAuthorizedNoLoggingWithoutNeedingActiveLocalCA(final AuthenticationToken authenticationToken, final String... resources) {
+        // First try to find one with an active CA
+        for (final RaMasterApi raMasterApi : raMasterApisLocalFirst) {
+            if (raMasterApi.isBackendAvailable()) {
+                try {
+                    if (raMasterApi.isAuthorizedNoLogging(authenticationToken, resources)) {
+                        return true;
+                    }
+                } catch (UnsupportedOperationException | RaMasterBackendUnavailableException e) {
+                    // Just try next implementation
+                }
+            }
+        }
+        // If none were found, try to find one without an active CA
+        for (final RaMasterApi raMasterApi : raMasterApisLocalFirst) {
+            try {
+                if (raMasterApi.isAuthorizedNoLogging(authenticationToken, resources)) {
+                    return true;
+                }
+            } catch (UnsupportedOperationException | RaMasterBackendUnavailableException e) {
+                // Just try next implementation
             }
         }
         return false;
@@ -1930,10 +2017,11 @@ public class RaMasterApiProxyBean implements RaMasterApiProxyBeanLocal {
         }
     }
 
+
     @Override
     public void revokeCertWithMetadata(AuthenticationToken admin, CertRevocationDto certRevocationDto)
             throws AuthorizationDeniedException, NoSuchEndEntityException, ApprovalException, WaitingForApprovalException,
-            RevokeBackDateNotAllowedForProfileException, AlreadyRevokedException, CADoesntExistsException, IllegalArgumentException, CertificateProfileDoesNotExistException {
+            RevokeBackDateNotAllowedForProfileException, AlreadyRevokedException, CADoesntExistsException, CertificateProfileDoesNotExistException {
         // Try remote first, since the certificate might be present in the RA database but the admin might not authorized to revoke it there
         CADoesntExistsException caDoesntExistException = null;
         for (final RaMasterApi raMasterApi : raMasterApis) {
@@ -3326,7 +3414,7 @@ public class RaMasterApiProxyBean implements RaMasterApiProxyBeanLocal {
                     }
                     // Just try next implementation
                 } catch (CADoesntExistsException e) {
-                    log.info("CA for for poxied request cold not be found:" + e.getMessage());
+                    log.info("CA for for proxied request cold not be found:" + e.getMessage());
                     if (caDoesntExistsException == null) {
                         caDoesntExistsException = e;
                     }
